[project]
name = "bore-depth"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "configargparse>=1.7.1",
    "imageio>=2.37.2",
    "kornia>=0.8.2",
    "lightning==2.5.2",
    "matplotlib>=3.10.8",
    "mmcv-full==1.4",
    "opencv-python>=4.12.0.88",
    "path>=17.1.1",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["ruff>=0.14.13"]

[tool.uv.sources]
loss_vegas = { path = "./loss_vegas" }
models = { path = "./models" }
